--- a/css/style.css
+++ b/css/style.css
@@ -768,7 +768,7 @@
     padding-bottom: 124px;
 }
 
-.section-8_box::before {
+.section-8::before {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -781,7 +781,7 @@
     background-repeat: no-repeat;
     background-size: 300px 400px;
 }
-.section-8_box::after{
+.section-8::after{
     position: absolute;
     bottom: 0;
     right: 0;
